Fix: pre tags overflowing

--- a/src/Components/post/Post.css
+++ b/src/Components/post/Post.css
@@ -73,3 +73,8 @@ video {
         transform: translateY(0px);
     }
 }
+
+pre {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
